policy/vulnerable_images/v1/samples/constraint.yaml
# *** You will always be compliant with this policy if AzureDefenderInClusterDefense is not installed in your cluster.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureDefenderBlockVulnerableImages
metadata:
  name: block-vulnerable-images
spec:
  match:
    kinds:
      - apiGroups: [ "" ]
        kinds: [ "Pod" ]
  parameters:
    excludedImages: []
    excludeNotPatchableFindings: false
    excludeFindingIDs: []
    sevirity:
      High: 0
      Medium: 0
      Low: 0
